- revised data structure - product and pricehistory are now company bound - offers are still market bound - unfinished

--- a/src/FlatMate.Web/Areas/Offers/Views/Admin/ManageProductDuplicates.cshtml
+++ b/src/FlatMate.Web/Areas/Offers/Views/Admin/ManageProductDuplicates.cshtml
@@ -10,9 +10,9 @@
 <section class="container">
     @foreach (var grouping in Model.GroupedProducts)
     {
-        var market = Model.Markets.First(x => x.Id == grouping.First().MarketId);
+        var company = Model.Companies.First(x => x.Id == grouping.First().CompanyId);
 
-        <h3>@grouping.Key.Name (@grouping.Key.SizeInfo) bei @market.Name</h3>
+        <h3>@grouping.Key.Name (@grouping.Key.SizeInfo) bei @company.Name</h3>
         <div class="row">
             <div class="col col-product">
                 <div class="row no-gutters standard-box">
@@ -22,7 +22,7 @@
                         var otherIds = grouping.Where(x => x.Id != productJso.Id).Select(x => x.Id);
 
                         <div class="col col-image">
-                            <img src="@OfferImageHelper.Get(productJso.ImageUrl, market.Company, 150)" width="150"/>
+                            <img src="@OfferImageHelper.Get(productJso.ImageUrl, company.Id, 150)" width="150"/>
                         </div>
                         <div class="col col-info">
                             <table>
@@ -37,10 +37,6 @@
                                 <tr>
                                     <td>Beschr.</td>
                                     <td>@productJso.Description.Truncate(100)</td>
-                                </tr>
-                                <tr>
-                                    <td>Preis</td>
-                                    <td>@productJso.Price</td>
                                 </tr>
                             </table>
                             <a asp-area="Offers" asp-controller="Product" asp-action="View" asp-route-id="@productJso.Id" class="btn btn-secondary">Details</a>
