--- a/src/FlatMate.Web/Views/Shared/_Layout.cshtml
+++ b/src/FlatMate.Web/Views/Shared/_Layout.cshtml
@@ -59,7 +59,7 @@
                 <a asp-area="Lists" asp-controller="ItemList" asp-action="My">Listen</a>
             </li>
             <li>
-                <a asp-area="Offers" asp-controller="Market" asp-action="Index">Angebote</a>
+                <a asp-area="Offers" asp-controller="Company" asp-action="Index">Angebote</a>
             </li>
             <li>
                 <a asp-area="Account" asp-controller="MyProfile" asp-action="Index">Profil</a>
