--- a/src/FlatMate.Web/Areas/Offers/Views/Product/View.cshtml
+++ b/src/FlatMate.Web/Areas/Offers/Views/Product/View.cshtml
@@ -14,7 +14,11 @@
         <div class="row">
             <div class="col col-picture">
                 <div class="picture-wrapper">
-                    <img class="b-lazy" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="@OfferImageHelper.Get(Model.Product.ImageUrl, (Company)Model.Product.CompanyId, 150)" width="150" height="150" />
+                    <img class="b-lazy"
+                         src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
+                         data-src="@OfferImageHelper.Get(Model.Product.ImageUrl, Model.Product.CompanyId, 150)"
+                         width="150"
+                         height="150" />
                 </div>
             </div>
             <div class="col-md col-product-info">
@@ -28,11 +32,6 @@
                     @if (Model.Offers.Count > 0)
                     {
                         <div><text>Letztes Angebot: @Model.Offers.Last().Price €</text></div>
-                    }
-
-                    @if (Model.Product.Price > 0)
-                    {
-                        <div><text>Letzter Preis: @Model.Product.Price €</text></div>
                     }
                 </div>
 
@@ -78,7 +77,7 @@
                         <td>@offer.From.ToShortDateString()</td>
                         <td>@offer.To.ToShortDateString()</td>
                         <td>@offer.Price €</td>
-                        <td><a asp-area="Offers" asp-controller="Market" asp-action="View" asp-route-id="@offer.Market.Id">@offer.Market.Name</a></td>
+                        <td><a asp-area="Offers" asp-controller="Company" asp-action="View" asp-route-id="@offer.MarketId">TODO MARKT</a></td>
                     </tr>
                 }
             </tbody>
