--- a/src/FlatMate.Web/wwwroot/css/offers/company-index.scss
+++ b/src/FlatMate.Web/wwwroot/css/offers/company-index.scss
@@ -1,4 +1,4 @@
-﻿.market-index {
+﻿.company-index {
     .market-box {
         display: flex;
         flex-flow: column;
@@ -8,7 +8,7 @@
 
         .image {
             text-align: center;
-            margin-bottom: 1rem;
+            line-height: 0;
         }
     }
 
