--- a/src/FlatMate.Web/wwwroot/css/offers/productfavorite-manage.scss
+++ b/src/FlatMate.Web/wwwroot/css/offers/productfavorite-manage.scss
@@ -1,7 +1,7 @@
 ﻿@import '../variables.scss';
 
 .productfavorite-manage {
-    .select-market {
+    .select-company {
         margin-bottom: .5rem;
     }
 
