- offer list grouped by product

--- a/src/FlatMate.Web/Areas/Lists/Views/ItemList/View.cshtml
+++ b/src/FlatMate.Web/Areas/Lists/Views/ItemList/View.cshtml
@@ -24,7 +24,7 @@
 
 </section>
 
-<script type="text/x-template" id="item-list-editor-template">
+<script type="text/html" id="item-list-editor-template">
 
     <div class="standard-box table">
 
