--- a/src/FlatMate.Web/Areas/Account/Views/MyProfile/Index.cshtml
+++ b/src/FlatMate.Web/Areas/Account/Views/MyProfile/Index.cshtml
@@ -20,16 +20,7 @@
     <h3>@Model.UserJso.UserName</h3>
 
     <div class="standard-box flex-row" style="padding: 1em">
-        <div class="picture-wrapper">
-            <img src="~/img/account/user-default.png" alt="profil picture" class="picture" />
-        </div>
-
-        <div class="informations">
-            <div class="flex-row">
-                <div class="key">Email</div>
-                @*<div class="value">@Model.UserJso.Email</div>*@
-            </div>
-
-        </div>
+        <div>Hier wird nie eine Profilübersicht entstehen.</div>
     </div>
+
 </section>
