--- a/src/FlatMate.Web/Areas/Account/Views/Create/Index.cshtml
+++ b/src/FlatMate.Web/Areas/Account/Views/Create/Index.cshtml
@@ -1,44 +1,58 @@
 ﻿@model FlatMate.Web.Areas.Account.Data.CreateUserVm
 
 @{
-    Layout = "_Layout";
+    Layout = "_LayoutBlank";
     ViewData["Title"] = "Nutzer erstellen";
     ViewData["PageTitle"] = "Nutzer erstellen";
 }
 
-<section class="container">
+<section class="container centered-form login">
 
-    <div class="centered-form standard-box">
-        <form asp-area="Account" asp-controller="Create" method="post">
-            <fieldset>
+    <h1 style="text-align: center">Account erstellen</h1>
 
-                <div class="form-group">
+    <form asp-area="Account" asp-controller="Create" method="post">
 
-                    <label asp-for="UserName"></label>
-                    <input asp-for="UserName" required/>
-                </div>
+        <div class="alert-wrapper">
+            @if (Model.Result != null)
+            {
+                if (Model.IsError)
+                {
+                    <div class="alert alert-error">@Model.Result.Message</div>
+                }
+                if (Model.IsSuccess)
+                {
+                    <div class="alert alert-success">@Model.Result.Message</div>
+                }
+            }
+        </div>
 
-                <div class="form-group">
-                    <label asp-for="Email"></label>
-                    <input asp-for="Email" required/>
-                </div>
+        <fieldset>
 
-                <div class="form-group">
-                    <label asp-for="Password"></label>
-                    <input asp-for="Password" required/>
-                </div>
+            <div class="form-group">
 
-                <div class="form-group">
-                    <label asp-for="PasswordConfirmation"></label>
-                    <input asp-for="PasswordConfirmation" required/>
-                </div>
+                <label asp-for="UserName"></label>
+                <input asp-for="UserName" required/>
+            </div>
 
-                <div class="form-group align-right">
-                    <input class="btn-primary" type="submit" value="Erstellen">
-                </div>
+            <div class="form-group">
+                <label asp-for="Email"></label>
+                <input asp-for="Email" required/>
+            </div>
 
-            </fieldset>
-        </form>
-    </div>
+            <div class="form-group">
+                <label asp-for="Password"></label>
+                <input asp-for="Password" required/>
+            </div>
 
+            <div class="form-group">
+                <label asp-for="PasswordConfirmation"></label>
+                <input asp-for="PasswordConfirmation" required/>
+            </div>
+
+            <div class="form-group align-right">
+                <input class="btn-primary" type="submit" value="Erstellen">
+            </div>
+
+        </fieldset>
+    </form>
 </section>
