--- a/src/FlatMate.Web/Areas/Account/Views/Create/Index.cshtml
+++ b/src/FlatMate.Web/Areas/Account/Views/Create/Index.cshtml
@@ -13,16 +13,13 @@
     <form asp-area="Account" asp-controller="Create" method="post">
 
         <div class="alert-wrapper">
-            @if (Model.Result != null)
+            @if (Model.IsError)
             {
-                if (Model.IsError)
-                {
-                    <div class="alert alert-error">@Model.Result.Message</div>
-                }
-                if (Model.IsSuccess)
-                {
-                    <div class="alert alert-success">@Model.Result.Message</div>
-                }
+                <div class="alert alert-error">@Model.Result?.Message</div>
+            }
+            @if (Model.IsSuccess)
+            {
+                <div class="alert alert-success">@Model.Result?.Message</div>
             }
         </div>
 
