--- a/src/FlatMate.Web/Areas/Offers/Views/ProductFavorite/Manage.cshtml
+++ b/src/FlatMate.Web/Areas/Offers/Views/ProductFavorite/Manage.cshtml
@@ -110,7 +110,7 @@
 
     <!-- /ko -->
 
-    <!-- ko if: productPage.length === 0 -->
+    <!-- ko if: productPage().length === 0 -->
 
     <div class="row">
         <div class="col align-center">
