--- a/src/FlatMate.Web/Areas/Offers/Views/ProductFavorite/Manage.cshtml
+++ b/src/FlatMate.Web/Areas/Offers/Views/ProductFavorite/Manage.cshtml
@@ -84,7 +84,7 @@
 
     </div>
 
-    <!-- ko if: productPage.length > 0 -->
+    <!-- ko if: productPage().length > 0 -->
 
     <div class="row">
         <div class="col">
