- sizeinfo to offer

--- a/src/FlatMate.Web/Areas/Offers/Views/Admin/ManageProductDuplicates.cshtml
+++ b/src/FlatMate.Web/Areas/Offers/Views/Admin/ManageProductDuplicates.cshtml
@@ -12,7 +12,7 @@
     {
         var company = Model.Companies.First(x => x.Id == grouping.First().CompanyId);
 
-        <h3>@grouping.Key.Name (@grouping.Key.SizeInfo) bei @company.Name</h3>
+        <h3>@grouping.Key.Name bei @company.Name</h3>
         <div class="row">
             <div class="col col-product">
                 <div class="row no-gutters standard-box">
