--- a/src/FlatMate.Web/Areas/Offers/Views/Offer/View.cshtml
+++ b/src/FlatMate.Web/Areas/Offers/Views/Offer/View.cshtml
@@ -1,10 +1,10 @@
-﻿@model FlatMate.Web.Areas.Offers.Data.MarketOffersVm
+﻿@model FlatMate.Web.Areas.Offers.Data.OfferViewVm
 
 @{
     Layout = "_Layout";
     ViewData["Title"] = Model.Company.Name;
     ViewData["PageTitle"] = "Im Angebot";
-    ViewData["MainClass"] = "company-view";
+    ViewData["MainClass"] = "offer-view";
 }
 
 <section class="container" style="min-height: 100vh">
