- dependecy update - design adjustments

--- a/src/FlatMate.Web/Areas/Lists/Views/ItemList/View.cshtml
+++ b/src/FlatMate.Web/Areas/Lists/Views/ItemList/View.cshtml
@@ -104,7 +104,7 @@
         </div>
     </div>
 
-    <div class="standard-box table">
+    <div class="standard-box table group-new">
 
         <div class="row">
 
