--- a/src/FlatMate.Web/wwwroot/css/variables.scss
+++ b/src/FlatMate.Web/wwwroot/css/variables.scss
@@ -12,8 +12,8 @@ $color-danger: #d9534f;
 $color-gray: #aaaaaa;
 $color-input-placeholder: #ccc;
 
-$color-main-background: #e5e7ea;
-$color-border: #d1d1d1;
+$color-main-background: #f5f7fb;
+$color-border: rgba(0, 40, 100, 0.12);
 $color-background: #f4f5f6;
 
 /**
