--- a/src/FlatMate.Web/wwwroot/css/shared/layout.scss
+++ b/src/FlatMate.Web/wwwroot/css/shared/layout.scss
@@ -40,7 +40,9 @@
 }
 
 .standard-box {
-    box-shadow: 0 1px 1px 0 rgba(50, 50, 50, .4);
+    //box-shadow: 0 1px 1px 0 rgba(50, 50, 50, .4);
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+    border: 1px solid $color-border;
     background-color: #fff;
 }
 
